Atualizacao de arquivos 2
ok

--- a/WTSistemas/Views/Home/Index.cshtml
+++ b/WTSistemas/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
     <div class="border shadow" style="text-align: justify; margin-top: 0.5px">
         <div class="jumbotron">
             <h1>WT Sistemas</h1>
-            <p class="lead">Tradição que traduz confiança e credibilidade. Confiança na excelência dos serviços prestados e credibilidade oriunda da responsabilidade e dedicação ao longo de mais de 4 anos de bons serviços às empresas de pequeno, médio e grande porte.</p>
+            <p class="lead">Tradição que traduz segurança, confiança e credibilidade em TI. Foco na segurança da informação, confiança na excelência dos serviços prestados e credibilidade oriunda da responsabilidade e dedicação ao longo de mais de 2 anos de bons serviços às empresas de pequeno, médio e grande porte.</p>
             <p><a href="javascript:loadOptions('paginas/empresa.html', 'empresa')" class="btn btn-primary btn-large">Leia mais &raquo;</a></p>
         </div>
 
