--- a/WTSistemas/Views/Home/Index.cshtml
+++ b/WTSistemas/Views/Home/Index.cshtml
@@ -38,24 +38,49 @@
         <div class="jumbotron">
             <h1>WT Sistemas</h1>
             <p class="lead">Tradição que traduz segurança, confiança e credibilidade em TI. Foco na segurança da informação, confiança na excelência dos serviços prestados e credibilidade oriunda da responsabilidade e dedicação ao longo de mais de 2 anos de bons serviços às empresas de pequeno, médio e grande porte.</p>
-            <p><a href="javascript:loadOptions('paginas/empresa.html', 'empresa')" class="btn btn-primary btn-large">Leia mais &raquo;</a></p>
+            <p><a href="javascript:loadOptions('paginas/empresa.html', 'empresa')" class="btn btn-primary btn-large">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
         </div>
 
         <div class="row">
             <div class="col-md-4 margin_left20">
-                <h3>Serviços dedicados ou rápidos</h3>
-                <p>Aluguel de veículos de todos os portes, motorista e/ou ajudante por período combinado.</p>
-                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico1')">Leia mais &raquo;</a></p>
+                <h3><img src="~/Images/Icones/segurança.png" /> ASP NET e MySQL rápido, seguro e confiável</h3>
+                <p>A linguagem de programação ASP NET é de fácil acesso pois está presente em mais de 95% dos serviços de hospedagem do mercado. Além disso conta com recursos avançados e segurança aprimorada, tornando seu site robusto e totalmente funcional.</p>
+                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico1')">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
             </div>
             <div class="col-md-4 margin_left5">
-                <h3>Transporte de pequeno, médio e grande porte</h3>
-                <p>Executamos serviços de transportes de pequeno, médio e grande porte saindo de São Paulo para todo o Brasil.</p>
-                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico2')">Leia mais &raquo;</a></p>
+                <h3><img src="~/Images/Icones/ajax.png" /> AJAX o futuro agora é o presente!</h3>
+                <p>A tecnologia AJAX é a união de outras linguagens de programação que facilita e muito não somente a produção mas também o gerenciamento de conteúdo do site. Rápido e com respostas quase instantânesa, o AJAX proporciona uma experiência agradável na web.</p>
+                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico2')">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
             </div>
             <div class="col-md-3-5 margin_left5">
-                <h3>Transporte de Mudanças</h3>
-                <p>Nossas equipes de Mudanças são compostas por: Motorista, Líder, Ajudante e Embalador. As equipes são munidas de sistema de comunicação diretamente ligada à Central de Operações em tempo real.</p>
-                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico3')">Leia mais &raquo;</a></p>
+                <h3><img src="~/Images/Icones/html5.png" /> HTML 5 e CSS3 aparência incrível</h3>
+                <p>As mais novas tecnologias web são utilizadas garantindo um visual limpo, organizado e empolgante. Conforto total ao utilizar o sites fazendo com que os visitantes retornem sempre! Não basta ser funcional, tem que ser bem acabado e que agrade aos olhos de quem usa.</p>
+                <p><a class="btn btn-default" href="javascript:loadOptions('paginas/servicos.html', 'servicos', 'servico3')">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
+            </div>
+        </div>
+
+        <div class="alert alert-info">
+            <h2 class="pager"><span class="glyphicon glyphicon-hand-right"></span>  Nós programamos <b>TUDO O QUE VOCÊ IMAGINAR PARA A WEB</b></h2>
+            <p class="lead">Se o seu projeto é semelhante a algo que já exista, nós produzimos sua idéia. Se o que você quer nunca foi feito, fazemos do jeito que você imaginou!</p>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 margin_left20">
+                <h3><img src="~/Images/Icones/configuracao.png" /> Painel de Gerenciamento</h3>
+                <p>Administrar um site já é trabalhoso por si só, por isso tomamos o cuidado de facilitar o máximo suas tarefas através de controles intuitivos em um painel seguro e fácil de usar.</p>
+                <p><span class="glyphicon glyphicon-cog"></span> Menus de funções simplificados e intuitivos.</p>
+                <p><span class="glyphicon glyphicon-cog"></span> Controle os diversos detalhes de seu projeto de forma descomplicada e funcional.</p>
+            </div>
+            <div class="col-md-4 margin_left5">
+                <h3><img src="~/Images/Icones/celular.png" /> Programação Responsiva</h3>
+                <p>Se a forma como as pessoas usam a internet mudou, nós acompanhamos esta evolução e estamos prontos a programar seu site de maneira acessivel e responsiva.</p>
+                <p><span class="glyphicon glyphicon-star-empty"></span> 100% de compatibilidade em celulares e tablets.</p>
+                <p><span class="glyphicon glyphicon-star-empty"></span> Adaptabilidade de conteudo independente de resolução do monitor de seu visitante.</p>
+            </div>
+            <div class="col-md-3-5 margin_left5">
+               <h3><img src="~/Images/Icones/layout.png" /> Criação de Layout</h3>
+                <p>Não importa se faltou inspiração ou tempo, se precisar temos uma equipe de criação pronta para ajuda-lo a aprovar belas e boas idéias.</p>
+                <p><span class="glyphicon glyphicon-share-alt"></span> Layouts compatíveis com as últimas técnologias web.</p> 
             </div>
         </div>
     </div>
