--- a/WTSistemas/Views/Home/Index.cshtml
+++ b/WTSistemas/Views/Home/Index.cshtml
@@ -38,9 +38,9 @@
         <div class="jumbotron">
             <h1>WT Sistemas</h1>
             <p class="lead">Tradição que traduz segurança, confiança e credibilidade em TI. Foco na segurança da informação, confiança na excelência dos serviços prestados e credibilidade oriunda da responsabilidade e dedicação ao longo de mais de 2 anos de bons serviços às empresas de pequeno, médio e grande porte.</p>
-            <p><a href="javascript:loadOptions('paginas/empresa.html', 'empresa')" class="btn btn-primary btn-large">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
+            <p><a href="javascript:loadOptions('Empresa/index', 'empresa')" class="btn btn-primary btn-large">Leia mais  <span class="glyphicon glyphicon-hand-up"></span></a></p>
         </div>
-
+        
         <div class="row">
             <div class="col-md-4 margin_left20">
                 <h3><img src="~/Images/Icones/segurança.png" /> ASP NET e MySQL rápido, seguro e confiável</h3>
@@ -59,9 +59,28 @@
             </div>
         </div>
 
-        <div class="alert alert-info">
-            <h2 class="pager"><span class="glyphicon glyphicon-hand-right"></span>  Nós programamos <b>TUDO O QUE VOCÊ IMAGINAR PARA A WEB</b></h2>
+        <div class="alert alert-info margin_left10 margin_right10">
+            <h2 class="pager">  
+                <span class="glyphicon glyphicon-hand-right"></span>  Nós programamos <b>TUDO O QUE VOCÊ IMAGINAR PARA A WEB</b></h2>
             <p class="lead">Se o seu projeto é semelhante a algo que já exista, nós produzimos sua idéia. Se o que você quer nunca foi feito, fazemos do jeito que você imaginou!</p>
+        </div>
+
+        <div class="float infobox-container arredondar" style="background-color: #808080; margin-left: 20px; margin-right: 20px; margin-top: 20px">
+            <div class="infobox">
+                <h3 id="toc3"><span class="margin_left20"></span><i class="icon-info-sign icon-white margin_top5"></i><span> Atenção</span></h3>
+                
+                <p>Horários de funcionamento do chat:</p>
+                <p>Segunda á Sexta das 08:30 ás 20:00 </p>
+                <p>Sábados, Domingos e Feriados das 12:00 ás 18:00 </p>
+                <br />
+                <i class="icon-exclamation-sign icon-white margin_top3" style="float: left; margin-right: 5px"></i>
+                <p><b>Por gentileza, responda a nossa perquisa de satisfação, que irá aparecer no seu navegador, quando seu atendimento for finalizado.</b></p>
+                
+                <br />
+            </div>
+        
+            <div class="triangle-l abaTriangle-l" style="margin-left: -14px;"></div>
+            <div class="triangle-r abaTriangle-r" style="margin-left: 0px;"></div>
         </div>
 
         <div class="row">
@@ -83,5 +102,22 @@
                 <p><span class="glyphicon glyphicon-share-alt"></span> Layouts compatíveis com as últimas técnologias web.</p> 
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-4 margin_left20">
+                <h3><img src="~/Images/Icones/servicesParados.png" /> Instalação de CMS</h3>
+                <p>Não importa quem produziu, se seu projeto esta ai parado por falta de tempo ou conhecimento técnico, deixe-nos ajuda-lo a colocar seu site nas nuvens.</p>
+                <p><span class="glyphicon glyphicon-share-alt"></span> Agilidade na instalação de CMS´s independente de quem os produziu.</p>
+            </div>
+            <div class="col-md-4 margin_left5">
+                <h3><img src="~/Images/Icones/projetosCompletos.png" /> Projetos completos</h3>
+                <p>Estamos disponíveis para dar toda a assistência para que sua agência tenha mais qualidade e menor tempo de resposta.</p>
+            </div>
+            <div class="col-md-3-5 margin_left5">
+               <h3><img src="~/Images/Icones/maisAgilidade.png" /> Mais Agilidade</h3>
+                <p>Agregue mão de obra capacitada à sua agência e tenha maior velocidade de resposta na entrega de seus projetos.</p>
+            </div>
+        </div>
+
     </div>
 </div>
